# rust-notification

./: Cargo.toml
conf/: settings.toml
src/: cli.rs  devops.rs  main.rs  server.rs
src/api/: interface.rs  mod.rs
src/application/: mod.rs
src/conf/: mod.rs
src/db/: mod.rs
src/repository/: entity.rs  mod.rs  sqlite.rs
