[package]
name = "vision-notification"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0"
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
clap = "4"
sqlx = { version = "0", features = ["runtime-tokio", "sqlite", "macros"] }
axum = { version = "0", features = ["ws"] }
tokio-stream = "0"
chrono = { version = "0", features = ["serde"] }
log = "0"
pretty_env_logger = "0"
thiserror = "1"
getset = "0"
once_cell = "1.21.3"
serde_json = "1"
[build-dependencies]
