[package]
name = "vision-notification"
version = "0.1.0"
edition = "2024"

[dependencies]
# common
chrono = { version = "0", features = ["serde"] }
getset = "0"
once_cell = "1"

# cli
config = "0"
clap = { version = "4", features = ["derive"] }

# serde
serde = { version = "1", features = ["derive"] }

# log
log = "0"
pretty_env_logger = "0"

# error
thiserror = { version = "2" }
anyhow = { version = "1" }

# runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
tokio-stream = "0"
tower = { version = "0", features = ["timeout"] }
tower-http = { version = "0", features = ["timeout", "trace"] }

# web
reqwest = { version = "0", features = ["json"] }
axum = { version = "0", features = ["tracing", "macros"] }
axum-extra = { version = "0", features = ["typed-header", "query"] }
axum-prometheus = { version = "0" }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = "9"

# db
sqlx = { version = "0", features = ["macros", "runtime-tokio", "json", "sqlite", "derive", "uuid", "ipnetwork", "chrono"] }
[build-dependencies]
